# libsoundio

./: .clang-tidy  meson.build  meson_options.txt
doc/: doxygen.conf.in  meson.build
doc/html/: meson.build
example/: .clang-tidy  sio_list_devices.c  sio_microphone.c  sio_record.c  sio_sine.c
soundio/: soundio.h
src/: .clang-tidy  alsa.c  alsa.h  channel_layout.c  coreaudio.c  coreaudio.h  dummy.c  dummy.h  jack.c  jack.h  list.h  os.c  os.h  pulseaudio.h  ring_buffer.c  ring_buffer.h  soundio.c  soundio_internal.h  soundio_private.h  util.c  util.h  wasapi.c  wasapi.h
test/: .clang-tidy  backend_disconnect_recover.c  latency.c  overflow.c  underflow.c  unit_tests.c
